--- a/.github/workflows/macintosh.yml
+++ b/.github/workflows/macintosh.yml
@@ -41,6 +41,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: build/${{ env.TARGET_NAME }}.app
-        asset_name: ${{ env.targetName }}_${{ github.ref_name }}.app
+        asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}.app
         tag: ${{ github.ref }}
         overwrite: true
