--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -35,7 +35,7 @@ jobs:
       shell: cmd
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Check
+    - name: Package
       shell: pwsh
       run: |
         ls build\Release
@@ -48,13 +48,21 @@ jobs:
         echo B
         ls build\Release
         py7zr --version
+        cd build
+        echo C
+        ls Release
+        py7zr a ${env:TARGET_NAME}.7z Release 
+        echo D
+        ls Release
+        cd ..
+        ls build
 
     - name: Release
       if: startsWith(github.event.ref, 'refs/tags/')
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: build/${{ env.TARGET_NAME }}
+        file: build/${{ env.TARGET_NAME }}.7z
         asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}
         tag: ${{ github.ref }}
         overwrite: true
