--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  tags:
+    - V*
 
 env:
   BUILD_TYPE: Release
@@ -51,7 +53,7 @@ jobs:
         cd build
         echo C
         ls Release
-        py7zr a ${env:TARGET_NAME}.7z Release 
+        py7zr a QTCmake.7z Release 
         echo D
         ls Release
         cd ..
@@ -63,6 +65,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: build/${{ env.TARGET_NAME }}.7z
-        asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}
+        asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}.7z
         tag: ${{ github.ref }}
         overwrite: true
