--- a/.github/workflows/macintosh.yml
+++ b/.github/workflows/macintosh.yml
@@ -33,22 +33,25 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{ env.BUILD_TYPE }}
 
     - name: Check
       run: |
         ls -l build
-        pwd
+        cd build
+        macdeployqt ${{ env.TARGET_NAME }}.app -qmldir=. -verbose=1 -dmg
+        cd ..
+        ls -l build
 
     - name: Release
       if: startsWith(github.event.ref, 'refs/tags/')
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: build/${{ env.TARGET_NAME }}.app
-        asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}.app
+        file: build/${{ env.TARGET_NAME }}.dmg
+        asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}.dmg
         tag: ${{ github.ref }}
         overwrite: true
