--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,28 +30,23 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure
-      shell: pwsh
       run: cmake -B ${github.workspace}/build -DCMAKE_BUILD_TYPE=${env.BUILD_TYPE}
 
     - name: Build
+      run: cmake --build ${github.workspace}/build --config ${env.BUILD_TYPE}
+        
+    - name: Package
       shell: pwsh
       run: |
-        cmake --build ${github.workspace}/build --config ${env.BUILD_TYPE}
         windeployqt --no-translations --compiler-runtime build\Release\${env:TARGET_NAME}'.exe'
+        echo A
         ls build\Release
         cd build
         mv Release ${env:TARGET_NAME}
         py7zr c ${env:TARGET_NAME}'.7z' ${env:TARGET_NAME} 
-        echo D
-        cd ..
-        ls build\Release
-
-    - name: Package
-      shell: cmd
-      run: |
-        cd build
-        dir
-        copy /b ${{github.workspace}}/3rd/7zsd_All.sfx + ${{github.workspace}}/3rd/config.txt + ${{env:TARGET_NAME}}.7z  ${{env:TARGET_NAME}}_setup.exe
+        echo B
+        ls .
+        cmd /c copy /b ${github.workspace}/3rd/7zsd_All.sfx + ${github.workspace}/3rd/config.txt + ${env:TARGET_NAME}'.7z'  ${env:TARGET_NAME}_setup.exe
         dir
         cd ..
 
