--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,16 +31,16 @@ jobs:
 
     - name: Configure
       shell: cmd
-      run: cmake -B ${github.workspace}/build -DCMAKE_BUILD_TYPE=${env.BUILD_TYPE}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       shell: cmd
-      run: cmake --build ${github.workspace}/build --config ${env.BUILD_TYPE}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
         
     - name: Package
       shell: pwsh
       run: |
-        windeployqt --no-translations --compiler-runtime build\Release\${env:TARGET_NAME}.exe
+        windeployqt --no-translations --compiler-runtime build\Release\${env:TARGET_NAME}'.exe'
         echo A
         ls build\Release
         cd build
