--- a/.github/workflows/macintosh.yml
+++ b/.github/workflows/macintosh.yml
@@ -51,6 +51,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: build/${{ env.TARGET_NAME }}.dmg
-        asset_name: ${{ env.TARGET_NAME }}_${{ github.ref_name }}.dmg
+        asset_name: ${{ env.TARGET_NAME }}_osx_${{ github.ref_name }}.dmg
         tag: ${{ github.ref }}
         overwrite: true
