--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -42,30 +42,17 @@ jobs:
       run: |
         cp -r 3rd/* build
         windeployqt --no-translations --compiler-runtime build\Release\${env:TARGET_NAME}'.exe'
-        ls build\Release
-        echo A
         cd build
         mv Release ${env:TARGET_NAME}
         py7zr c ${env:TARGET_NAME}'.7z' ${env:TARGET_NAME} 
-        echo B
-        ls .
-        cmd /c copy /b 7zsd_All.sfx + config.txt + QTCmake.7z  QTCmake_setup1.exe
-        echo C
-        ls .
-        cmd /c copy /b 7zsd_All.sfx + config.txt + ${env:TARGET_NAME}'.7z'  QTCmake_setup2.exe
-        echo D
-        ls .
         cmd /c copy /b 7zsd_All.sfx + config.txt + ${env:TARGET_NAME}'.7z'  ${env:TARGET_NAME}_setup.exe
-        echo E
-        ls .
         cd ..
-
     - name: Release
       if: startsWith(github.event.ref, 'refs/tags/')
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: build/${{ env.TARGET_NAME }}.7z
-        asset_name: ${{ env.TARGET_NAME }}_setup_${{ github.ref_name }}.7z
+        file: build/${{ env.TARGET_NAME }}_setup.exe
+        asset_name: ${{ env.TARGET_NAME }}_win_${{ github.ref_name }}.exe
         tag: ${{ github.ref }}
         overwrite: true
